syntax = "proto3";

option java_package = "com.haberdashervcs.common.protobuf";
option java_outer_classname = "LocalDbProto";
option java_multiple_files = false;


message LocalBranchState {
    string branchName = 1;
    int64 baseCommitId = 2;
    int64 headCommitId = 3;
    int64 currentlySyncedCommitId = 4;
}


message LocalRepoState {
    enum RepoState {
        NORMAL = 0;
        REBASE_IN_PROGRESS = 1;
    }

    RepoState state = 1;

    // In the form "main:N"
    string rebaseCommitBeingIntegrated = 2;
}
